--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #fceedd;
+    background-color: #ffac03;
     overflow-x: hidden; /* Evitar desbordamiento horizontal */
 }
 
@@ -142,6 +142,7 @@ header .navbar-brand img {
     align-items: center;
     text-align: center;
     padding: 20px;
+    color: #ffac03;
 }
 
 .text-container h2 {
@@ -152,7 +153,7 @@ header .navbar-brand img {
 
 .text-container p {
     font-size: 1rem;
-    color: #fff;
+    color: #000;
     opacity: 0;
     transform: scale(0.8);
     animation: fadeIn 3s ease forwards;
@@ -186,6 +187,18 @@ header .navbar-brand img {
     padding: 8px 15px;
     margin: 1.5vh;
     text-transform: uppercase;
+}
+
+.video-wrapper {
+    position: relative;
+    width: 100%;
+    max-width: 640px; /* Ajustar el tamaño máximo en pantallas grandes */
+    aspect-ratio: 16 / 9; /* Mantener la proporción del video */
+}
+
+.video-wrapper iframe {
+    width: 100%;
+    height: 100%;
 }
 
 /* Footer */
